@@ -1,5 +1,9 @@
 2025-01-07  Zhengyi Fu  <i@fuzy.me>
 
+	Move consult interface for browser-hist to a separate file.
+	* consult-browser-hist.el: New file.
+	* init.el: Remove consult-browser-hist implemenation.
+
 	* init.el: Add a consult-buffer-source for FireFox.
 	Add autoload cookie for `browser-hist--send-query'.
 
